update selecting data labs

--- a/1-selecting-data/5-exploring-data.ipynb
+++ b/1-selecting-data/5-exploring-data.ipynb
@@ -25,14 +25,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ** As Data Scientists, we often don't know where our data comes from."
+    "Remember that as data scientists, we sometimes won't know where our data comes from."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> For example, is it all of the movies, all of the movies from a certain time period?  This will have an impact on how we interpret our results. "
+    "> For example, in our movies datasets, are we looking at all of the movies, or all of the movies from a certain time period?  \n",
+    "\n",
+    "The answer to these questions will have an impact on how we interpret our results. "
    ]
   },
   {
@@ -46,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, let's start with dataframe of the movies data.  The first thing we'll do is load up the data, and then perhaps look at the columns available."
+    "So let's get a better sense of the data in our 538 moves dataset.  The first thing we'll do is load up the data, and then perhaps look at the columns available."
    ]
   },
   {
@@ -487,6 +489,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> We can see even more information with `movies_df.describe(include = 'all')`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
@@ -503,37 +512,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7000"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "movies_df.budget.min()"
+    "### Exploring Individual Columns"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploring Columns"
+    "Now that we have looked at summary statistics for an entire dataframe, we can also explore methods that allow us to explore individual columns."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best way to get a sense of the data is to plot it.  We can do so with matplotlib, which is built into pandas."
+    "The best way to get an overview of the data in an individual column is to plot it.  We can do so with matplotlib, which is built into pandas."
    ]
   },
   {
@@ -614,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or if we just wish to look at a single summary statistics, pandas will allow it."
+    "Or if we just wish to look at a single summary statistic, pandas will allow it."
    ]
   },
   {
@@ -648,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, if we wish to see see a histogram of data printed out, we can do so with the value_counts method.  The value counts method will show us the number of times each value occurs.  It can be good for categorical type data, like here, the year."
+    "Finally, if we wish to see see a histogram of data printed out, we can do so with the `value_counts` method.  The `value_counts` method will show us the number of times each value occurs.  It can be good for categorical type data, like here, the year."
    ]
   },
   {
@@ -743,7 +739,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this lesson, we learned some basic methods for exploring data."
+    "In this lesson, we learned some basic methods for exploring data.  We saw how to get an overview of the data in an entire dataframe with the `head`, `tail`, `columns` and `describe` method.\n",
+    "\n",
+    "Then we saw how we can focus in on individual columns by plotting our data with the `plot` method, or calling `describe` on a single column, or by using the `value_counts` method."
    ]
   }
  ],
