--- a/1-selecting-data/8-selecting-rows-data-lab.ipynb
+++ b/1-selecting-data/8-selecting-rows-data-lab.ipynb
@@ -17,11 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "url = \"https://raw.githubusercontent.com/analytics-engineering-jigsaw/introductory-pandas/master/1-selecting-data/bike_sharing.csv\""
    ]
   },
   {
@@ -137,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
